--- a/meni.html
+++ b/meni.html
@@ -5,7 +5,7 @@
       rel="icon"
       type="image/x-icon"
       class="js-site-favicon"
-      href="img/Lobby_logo_blue.ico"
+      href="img/princip.ico"
     />
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
