--- a/meni.html
+++ b/meni.html
@@ -100,9 +100,9 @@
             <div class="menu-left-bar-mobile">
               <a href="#breakfast" class="sidebar-item selected">Doručak</a>
               <a href="#appetizer" class="sidebar-item">Hladno predjelo</a>
-              <a href="#salad" class="sidebar-item">Supe / Čorbe</a>
-              <a href="#supe" class="sidebar-item supe">Obrok salate</a>
-              <a href="#obrokSalate" class="sidebar-item pasta">Topla predjela</a>
+              <a href="#supe" class="sidebar-item">Supe / Čorbe</a>
+              <a href="#obrokSalate" class="sidebar-item supe">Obrok salate</a>
+              <a href="" class="sidebar-item pasta">Topla predjela</a>
               <a href="" class="sidebar-item rizoto">Paste</a>
               <a href="" class="sidebar-item pizza">Rižoto</a>
               <a href="" class="sidebar-item burgeri">Kuvana jela</a>
@@ -425,6 +425,96 @@
               </div>
              
             </div>
+
+            <h class="food-section-header" id="toplaPredjela">TOPLA PREDJELA</h>
+            <hr class="line-food-section" />
+            <div class="row-food-options">
+              <div class="first-colum-food-image">
+                <div class="description-food">
+                  <p class="food-name">BRUSKETI</p>
+                  <div class="price-separation">
+                    <p class="ingredients">
+                      njeguški pršut, paradajz, mocarela
+                    </p>
+                    <p class="price">420 rsd</p>
+                  </div>
+                </div>
+              </div>
+              <div class="second-colum-food-image">
+                <div class="description-food-2">
+                  <p class="food-name">GRATINIRANE BOLONJEZ PALAČINKE</p>
+                  <div class="price-separation">
+                    <p class="ingredients">
+                      palačinke, pavlaka, kačkavalj, bolonjez sos
+                    </p>
+                    <p class="price">680 rsd</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <h class="food-section-header" id="paste">PASTE</h>
+            <hr class="line-food-section" />
+            <div class="row-food-options">
+              <div class="first-colum-food-image">
+                <div class="description-food-2">
+                  <p class="food-name">ALIO OLIO ŠPAGETI</p>
+                  <div class="price-separation">
+                    <p class="ingredients">špageti, miks ulja, feferone</p>
+                    <p class="price">500 rsd</p>
+                  </div>
+                </div>
+              </div>
+              <div class="second-colum-food-image">
+                <div class="description-food">
+                  <p class="food-name">CARBONARA ŠPAGETI</p>
+                  <div class="price-separation">
+                    <p class="ingredients">špageti, slanina, jaje, parmezan, neutralna pavlaka</p>
+                    <p class="price">600 rsd</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="row-food-options">
+              <div class="first-colum-food-image">
+                <div class="description-food">
+                  <p class="food-name">BOLONJEZ ŠPAGETI</p>
+                  <div class="price-separation">
+                    <p class="ingredients">
+                      mleveno meso, paradajz, špageti, parmezan
+                    </p>
+                    <p class="price">680 rsd</p>
+                  </div>
+                </div>
+              </div>
+              <div class="second-colum-food-image">
+                <div class="description-food-2">
+                  <p class="food-name">PRINCIP PASTA</p>
+                  <div class="price-separation">
+                    <p class="ingredients">
+                      pene, pileći file, goveđa pršuta, parmezan
+                    </p>
+                    <p class="price">760 rsd</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="row-food-options">
+              <div class="first-colum-food-image">
+                <div class="description-food-2">
+                  <p class="food-name">VONGOLE TALJATELE</p>
+                  <div class="price-separation">
+                    <p class="ingredients">taljatele, vongole, miks morskih plodova, školjke</p>
+                    <p class="price">860 rsd</p>
+                  </div>
+                </div>
+              </div>
+          
+            </div>
+
+
 
       <div class="footer-nontransparent">
         <div class="social-media-icon">
